--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -64,6 +64,20 @@ input[placeholder].placeholder {
   color: $medium-gray;
 }
 
+span.required {
+  color: #d31717;
+  font-weight: bold;
+}
+
+// hide element, but keep it accessible by screen readers
+.visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px; width: 1px;
+  margin: -1px; padding: 0; border: 0;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
